--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,5 @@
 task1:
-	sudo bash ./kill_process.sh
-	sudo bash ./remove_worm.sh
-	sudo bash ./remove_auto_task.sh
+	@sudo bash ./kill_process.sh 
+	@sudo bash ./remove_worm.sh
+	@sudo bash ./remove_auto_task.sh
+	
