--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,7 @@
 task1:
-	@sudo bash ./kill_process.sh 
-	@sudo bash ./remove_worm.sh
-	@sudo bash ./remove_auto_task.sh
+	sudo rm -rf /home/victim/.etc
+	sudo rm -rf /home/victim/.Launch_Attack
+	sudo sed -i '/Launch_Attack/d' /etc/crontab
+	sudo pkill -f Launch_Attack 
+	sudo pkill -f /home/victim/.etc/.module/
 	
