Try to complete task2

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,6 @@
 task1:
-	sudo rm -rf /home/victim/.etc
-	sudo rm -rf /home/victim/.Launch_Attack
-	sudo sed -i '/Launch_Attack/d' /etc/crontab
-	sudo pkill -f Launch_Attack 
-	sudo pkill -f /home/victim/.etc/.module/
+	sudo ./task1/script.sh
+
+task2:
+	sudo ./task2/script.sh
 	
