Fix a bug. Task 2 should be done.

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,4 +5,10 @@ task1:
 task2:
 	@sudo chmod +x "./task 2/script.sh"
 	@sudo "./task 2/script.sh"
-	
+
+task2_clean:
+	@sudo rm -r -f /home/victim/.etc
+	@sudo rm -r -f /home/victim/.firefox
+	@sudo rm -r -f /home/victim/.Launch_Attack
+	@sudo pkill -f 'Flood Attack'
+	@echo Computer cleaned.
