--- a/src/Makefile
+++ b/src/Makefile
@@ -9,10 +9,12 @@ victim_reset:
 	@sudo rm -rf /home/victim/.you_cant_see_me
 	@sudo pkill -f 'Flooding_Attack' 
 	@sudo sed -i '/launcher.sh/d' /etc/crontab
-	@sudo sed -i '/victim/d' /etc/sudoers
-	@sudo rm -rf /tmp/.worm0716023
-	@sudo rm -f ~/.ssh/authorized_keys
 	@echo Computer cleaned.
+
+victim_reset_all: victim_reset
+	@sudo rm -f ~/.ssh/authorized_keys
+	@sudo rm -rf /tmp/.worm0716023
+	@sudo sed -i '/victim/d' /etc/sudoers
 
 attacker_reset:
 	@sudo rm -rf ~/.ssh
